--- a/config/config-shuffleboard.json
+++ b/config/config-shuffleboard.json
@@ -165,6 +165,99 @@
               "_glyph": 148,
               "_showGlyph": false
             }
+          },
+          "30,1": {
+            "size": [
+              4,
+              4
+            ],
+            "content": {
+              "_type": "Boolean Box",
+              "_source0": "network_table:///SmartDashboard/Drive Brake",
+              "_title": "Drive Brake",
+              "_glyph": 148,
+              "_showGlyph": false,
+              "Colors/Color when true": "#7CFC00FF",
+              "Colors/Color when false": "#8B0000FF"
+            }
+          },
+          "1,6": {
+            "size": [
+              2,
+              2
+            ],
+            "content": {
+              "_type": "Text View",
+              "_source0": "network_table:///SmartDashboard/LED R",
+              "_title": "LED R",
+              "_glyph": 148,
+              "_showGlyph": false
+            }
+          },
+          "4,6": {
+            "size": [
+              2,
+              2
+            ],
+            "content": {
+              "_type": "Text View",
+              "_source0": "network_table:///SmartDashboard/LED G",
+              "_title": "LED G",
+              "_glyph": 148,
+              "_showGlyph": false
+            }
+          },
+          "7,6": {
+            "size": [
+              2,
+              2
+            ],
+            "content": {
+              "_type": "Text View",
+              "_source0": "network_table:///SmartDashboard/LED B",
+              "_title": "LED B",
+              "_glyph": 148,
+              "_showGlyph": false
+            }
+          },
+          "4,2": {
+            "size": [
+              2,
+              1
+            ],
+            "content": {
+              "_type": "Text View",
+              "_source0": "network_table:///SmartDashboard/PPRamseteCommand/xErrorMeters",
+              "_title": "PPRamseteCommand/xErrorMeters",
+              "_glyph": 148,
+              "_showGlyph": false
+            }
+          },
+          "22,2": {
+            "size": [
+              2,
+              1
+            ],
+            "content": {
+              "_type": "Text View",
+              "_source0": "network_table:///SmartDashboard/PPRamseteCommand/yErrorMeters",
+              "_title": "PPRamseteCommand/yErrorMeters",
+              "_glyph": 148,
+              "_showGlyph": false
+            }
+          },
+          "28,2": {
+            "size": [
+              2,
+              1
+            ],
+            "content": {
+              "_type": "Text View",
+              "_source0": "network_table:///SmartDashboard/PPRamseteCommand/rotationErrorDegrees",
+              "_title": "PPRamseteCommand/rotationErrorDegrees",
+              "_glyph": 148,
+              "_showGlyph": false
+            }
           }
         }
       }
@@ -201,33 +294,33 @@
             "content": {
               "_type": "Text View",
               "_source0": "network_table:///SmartDashboard/Arm Length",
-              "_title": "/SmartDashboard/Arm Length",
+              "_title": "Arm Length",
               "_glyph": 148,
               "_showGlyph": false
             }
           },
-          "13,0": {
+          "12,0": {
             "size": [
-              2,
+              3,
               2
             ],
             "content": {
               "_type": "Text View",
               "_source0": "network_table:///SmartDashboard/CLAW MODE",
-              "_title": "/SmartDashboard/CLAW MODE",
+              "_title": "MODE",
               "_glyph": 148,
               "_showGlyph": false
             }
           },
           "15,0": {
             "size": [
-              2,
-              1
+              3,
+              2
             ],
             "content": {
               "_type": "Boolean Box",
               "_source0": "network_table:///SmartDashboard/STOPPY ON",
-              "_title": "/SmartDashboard/STOPPY ON",
+              "_title": "CLIMB",
               "_glyph": 148,
               "_showGlyph": false,
               "Colors/Color when true": "#7CFC00FF",
@@ -242,7 +335,7 @@
             "content": {
               "_type": "Text View",
               "_source0": "network_table:///SmartDashboard/Shoulder Angle",
-              "_title": "/SmartDashboard/Shoulder Angle",
+              "_title": "Shoulder Angle",
               "_glyph": 148,
               "_showGlyph": false
             }
@@ -255,20 +348,7 @@
             "content": {
               "_type": "Text View",
               "_source0": "network_table:///SmartDashboard/Turret Rot",
-              "_title": "/SmartDashboard/Turret Rot",
-              "_glyph": 148,
-              "_showGlyph": false
-            }
-          },
-          "0,0": {
-            "size": [
-              6,
-              2
-            ],
-            "content": {
-              "_type": "ComboBox Chooser",
-              "_source0": "network_table:///SmartDashboard/Auto Selector",
-              "_title": "/SmartDashboard/Auto Selector",
+              "_title": "Turret Rot",
               "_glyph": 148,
               "_showGlyph": false
             }
@@ -281,20 +361,20 @@
             "content": {
               "_type": "Toggle Switch",
               "_source0": "network_table:///SmartDashboard/Drive Mode",
-              "_title": "SmartDashboard/Drive Mode",
+              "_title": "Drive Mode",
               "_glyph": 148,
               "_showGlyph": false
             }
           },
           "15,2": {
             "size": [
-              2,
+              3,
               2
             ],
             "content": {
               "_type": "Boolean Box",
               "_source0": "network_table:///SmartDashboard/PIDs On",
-              "_title": "SmartDashboard/PIDs On",
+              "_title": "PIDs On",
               "_glyph": 148,
               "_showGlyph": false,
               "Colors/Color when true": "#7CFC00FF",
@@ -304,12 +384,12 @@
           "21,2": {
             "size": [
               3,
-              1
+              2
             ],
             "content": {
               "_type": "Text View",
               "_source0": "network_table:///SmartDashboard/#  Of Targets",
-              "_title": "SmartDashboard/#  Of Targets",
+              "_title": "#  Of Targets",
               "_glyph": 148,
               "_showGlyph": false
             }
@@ -319,9 +399,9 @@
     }
   ],
   "windowGeometry": {
-    "x": -7.333333492279053,
-    "y": -7.333333492279053,
-    "width": 1294.6666259765625,
-    "height": 694.6666870117188
+    "x": -6.666666507720947,
+    "y": 0.0,
+    "width": 1293.3333740234375,
+    "height": 489.3333435058594
   }
 }
