--- a/config/config-shuffleboard.json
+++ b/config/config-shuffleboard.json
@@ -2,7 +2,7 @@
   "tabPane": [
     {
       "title": "SmartDashboard",
-      "autoPopulate": true,
+      "autoPopulate": false,
       "autoPopulatePrefix": "SmartDashboard/",
       "widgetPane": {
         "gridSize": 32.0,
@@ -11,250 +11,28 @@
         "vgap": 4.0,
         "titleType": 1,
         "tiles": {
-          "0,0": {
-            "size": [
-              4,
-              4
-            ],
-            "content": {
-              "_type": "Boolean Box",
-              "_source0": "network_table:///SmartDashboard/Drive Mode",
-              "_title": "Drive Mode",
-              "_glyph": 148,
-              "_showGlyph": false,
-              "Colors/Color when true": "#7CFC00FF",
-              "Colors/Color when false": "#8B0000FF"
-            }
-          },
-          "4,0": {
+          "15,3": {
             "size": [
               6,
-              1
-            ],
-            "content": {
-              "_type": "Field",
-              "_source0": "network_table:///SmartDashboard/Field",
-              "_title": "Field",
-              "_glyph": 148,
-              "_showGlyph": false,
-              "Game/Game": "A2023_Charged_Up",
-              "Visuals/Robot Icon Size": 50.0,
-              "Visuals/Show Outside Circles": false
-            }
-          },
-          "10,0": {
-            "size": [
-              12,
-              8
-            ],
-            "content": {
-              "_type": "Differential Drivebase",
-              "_source0": "network_table:///SmartDashboard/DifferentialDrive[1]",
-              "_title": "DifferentialDrive[1]",
-              "_glyph": 148,
-              "_showGlyph": false,
-              "Wheels/Number of wheels": 4,
-              "Wheels/Wheel diameter": 80.0,
-              "Visuals/Show velocity vectors": true
-            }
-          },
-          "22,0": {
-            "size": [
-              2,
-              2
-            ],
-            "content": {
-              "_type": "ComboBox Chooser",
-              "_source0": "network_table:///SmartDashboard/Auto Selector",
-              "_title": "Auto Selector",
-              "_glyph": 148,
-              "_showGlyph": false
-            }
-          },
-          "24,0": {
-            "size": [
-              4,
-              4
-            ],
-            "content": {
-              "_type": "Boolean Box",
-              "_source0": "network_table:///SmartDashboard/PIDs On",
-              "_title": "PIDs On",
-              "_glyph": 148,
-              "_showGlyph": false,
-              "Colors/Color when true": "#7CFC00FF",
-              "Colors/Color when false": "#8B0000FF"
-            }
-          },
-          "28,0": {
-            "size": [
-              2,
-              1
-            ],
-            "content": {
-              "_type": "Text View",
-              "_source0": "network_table:///SmartDashboard/Arm Length",
-              "_title": "Arm Length",
-              "_glyph": 148,
-              "_showGlyph": false
-            }
-          },
-          "30,0": {
-            "size": [
-              2,
-              1
-            ],
-            "content": {
-              "_type": "Text View",
-              "_source0": "network_table:///SmartDashboard/CLAW MODE",
-              "_title": "CLAW MODE",
-              "_glyph": 148,
-              "_showGlyph": false
-            }
-          },
-          "32,0": {
-            "size": [
-              2,
-              1
-            ],
-            "content": {
-              "_type": "Text View",
-              "_source0": "network_table:///SmartDashboard/Shoulder Angle",
-              "_title": "Shoulder Angle",
-              "_glyph": 148,
-              "_showGlyph": false
-            }
-          },
-          "4,1": {
-            "size": [
-              2,
-              1
-            ],
-            "content": {
-              "_type": "Text View",
-              "_source0": "network_table:///SmartDashboard/Turret Rot",
-              "_title": "Turret Rot",
-              "_glyph": 148,
-              "_showGlyph": false
-            }
-          },
-          "6,1": {
-            "size": [
-              4,
-              4
-            ],
-            "content": {
-              "_type": "Boolean Box",
-              "_source0": "network_table:///SmartDashboard/STOPPY ON",
-              "_title": "STOPPY ON",
-              "_glyph": 148,
-              "_showGlyph": false,
-              "Colors/Color when true": "#7CFC00FF",
-              "Colors/Color when false": "#8B0000FF"
-            }
-          },
-          "28,1": {
-            "size": [
-              2,
-              1
-            ],
-            "content": {
-              "_type": "Text View",
-              "_source0": "network_table:///SmartDashboard/#  Of Targets",
-              "_title": "#  Of Targets",
-              "_glyph": 148,
-              "_showGlyph": false
-            }
-          },
-          "30,1": {
-            "size": [
-              4,
-              4
-            ],
-            "content": {
-              "_type": "Boolean Box",
-              "_source0": "network_table:///SmartDashboard/Drive Brake",
-              "_title": "Drive Brake",
-              "_glyph": 148,
-              "_showGlyph": false,
-              "Colors/Color when true": "#7CFC00FF",
-              "Colors/Color when false": "#8B0000FF"
-            }
-          },
-          "1,6": {
-            "size": [
-              2,
               2
             ],
             "content": {
               "_type": "Text View",
-              "_source0": "network_table:///SmartDashboard/LED R",
-              "_title": "LED R",
+              "_source0": "network_table:///SmartDashboard/SHOULDER ENC.",
+              "_title": "SmartDashboard/SHOULDER ENC.",
               "_glyph": 148,
               "_showGlyph": false
             }
           },
-          "4,6": {
+          "15,5": {
             "size": [
-              2,
+              6,
               2
             ],
             "content": {
               "_type": "Text View",
-              "_source0": "network_table:///SmartDashboard/LED G",
-              "_title": "LED G",
-              "_glyph": 148,
-              "_showGlyph": false
-            }
-          },
-          "7,6": {
-            "size": [
-              2,
-              2
-            ],
-            "content": {
-              "_type": "Text View",
-              "_source0": "network_table:///SmartDashboard/LED B",
-              "_title": "LED B",
-              "_glyph": 148,
-              "_showGlyph": false
-            }
-          },
-          "4,2": {
-            "size": [
-              2,
-              1
-            ],
-            "content": {
-              "_type": "Text View",
-              "_source0": "network_table:///SmartDashboard/PPRamseteCommand/xErrorMeters",
-              "_title": "PPRamseteCommand/xErrorMeters",
-              "_glyph": 148,
-              "_showGlyph": false
-            }
-          },
-          "22,2": {
-            "size": [
-              2,
-              1
-            ],
-            "content": {
-              "_type": "Text View",
-              "_source0": "network_table:///SmartDashboard/PPRamseteCommand/yErrorMeters",
-              "_title": "PPRamseteCommand/yErrorMeters",
-              "_glyph": 148,
-              "_showGlyph": false
-            }
-          },
-          "28,2": {
-            "size": [
-              2,
-              1
-            ],
-            "content": {
-              "_type": "Text View",
-              "_source0": "network_table:///SmartDashboard/PPRamseteCommand/rotationErrorDegrees",
-              "_title": "PPRamseteCommand/rotationErrorDegrees",
+              "_source0": "network_table:///SmartDashboard/ARM ENC.",
+              "_title": "SmartDashboard/ARM ENC.",
               "_glyph": 148,
               "_showGlyph": false
             }
@@ -399,9 +177,9 @@
     }
   ],
   "windowGeometry": {
-    "x": -6.666666507720947,
+    "x": 312.0,
     "y": 0.0,
-    "width": 1293.3333740234375,
-    "height": 489.3333435058594
+    "width": 974.6666870117188,
+    "height": 488.0
   }
 }
