--- a/config/config-shuffleboard.json
+++ b/config/config-shuffleboard.json
@@ -19,7 +19,7 @@
             "content": {
               "_type": "Text View",
               "_source0": "network_table:///SmartDashboard/SHOULDER ENC.",
-              "_title": "SmartDashboard/SHOULDER ENC.",
+              "_title": "/SmartDashboard/SHOULDER ENC.",
               "_glyph": 148,
               "_showGlyph": false
             }
@@ -32,7 +32,7 @@
             "content": {
               "_type": "Text View",
               "_source0": "network_table:///SmartDashboard/ARM ENC.",
-              "_title": "SmartDashboard/ARM ENC.",
+              "_title": "/SmartDashboard/ARM ENC.",
               "_glyph": 148,
               "_showGlyph": false
             }
@@ -64,7 +64,7 @@
         "vgap": 4.0,
         "titleType": 1,
         "tiles": {
-          "32,0": {
+          "9,0": {
             "size": [
               3,
               2
@@ -105,7 +105,7 @@
               "Colors/Color when false": "#8B0000FF"
             }
           },
-          "32,2": {
+          "9,2": {
             "size": [
               3,
               2
@@ -118,7 +118,7 @@
               "_showGlyph": false
             }
           },
-          "32,4": {
+          "9,4": {
             "size": [
               3,
               2
@@ -177,9 +177,9 @@
     }
   ],
   "windowGeometry": {
-    "x": 312.0,
+    "x": 304.0,
     "y": 0.0,
-    "width": 974.6666870117188,
-    "height": 488.0
+    "width": 982.6666870117188,
+    "height": 487.3333435058594
   }
 }
