--- a/config/config-shuffleboard.json
+++ b/config/config-shuffleboard.json
@@ -77,7 +77,7 @@
               "_showGlyph": false
             }
           },
-          "12,0": {
+          "3,2": {
             "size": [
               3,
               2
@@ -90,7 +90,7 @@
               "_showGlyph": false
             }
           },
-          "15,0": {
+          "3,0": {
             "size": [
               3,
               2
@@ -131,20 +131,7 @@
               "_showGlyph": false
             }
           },
-          "21,0": {
-            "size": [
-              3,
-              2
-            ],
-            "content": {
-              "_type": "Toggle Switch",
-              "_source0": "network_table:///SmartDashboard/Drive Mode",
-              "_title": "Drive Mode",
-              "_glyph": 148,
-              "_showGlyph": false
-            }
-          },
-          "15,2": {
+          "6,0": {
             "size": [
               3,
               2
@@ -159,15 +146,36 @@
               "Colors/Color when false": "#8B0000FF"
             }
           },
-          "21,2": {
+          "12,0": {
+            "size": [
+              14,
+              8
+            ],
+            "content": {
+              "_type": "Camera Stream",
+              "_source0": "camera_server://limelight",
+              "_title": "limelight",
+              "_glyph": 148,
+              "_showGlyph": false,
+              "Crosshair/Show crosshair": true,
+              "Crosshair/Crosshair color": "#FFFFFFFF",
+              "Controls/Show controls": true,
+              "Controls/Rotation": "NONE",
+              "compression": -1.0,
+              "fps": -1,
+              "imageWidth": -1,
+              "imageHeight": -1
+            }
+          },
+          "0,8": {
             "size": [
               3,
               2
             ],
             "content": {
               "_type": "Text View",
-              "_source0": "network_table:///SmartDashboard/#  Of Targets",
-              "_title": "#  Of Targets",
+              "_source0": "network_table:///limelight/camMode",
+              "_title": "/limelight/camMode",
               "_glyph": 148,
               "_showGlyph": false
             }
