--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,8 @@ bin/
 
 # Simulation GUI and other tools window save file
 *-window.json
+simgui-ds.json
+.OutlineViewer/
+config/config-shuffleboard.json
+config/glass.json
+simgui.json
