--- a/config/config-drivetrain.json
+++ b/config/config-drivetrain.json
@@ -1,25 +1,31 @@
 {
+  "canivore names": [
+    "rio",
+    "rio"
+  ],
   "counts per rotation": 1.0,
+  "encoder canivore name": "rio",
   "encoder type": "Encoder Port",
   "encoding": false,
   "gearing denominator": 1.0,
   "gearing numerator": 7.31,
   "gyro": "ADXRS450",
+  "gyro canivore name": "rio",
   "gyro ctor": "SPI (Onboard CS0)",
   "is drivetrain": true,
   "motor controllers": [
     "SPARK MAX (Brushless)",
     "SPARK MAX (Brushless)"
   ],
-  "number of samples per average": 1,
+  "number of samples per average": 8,
   "primary encoder inverted": false,
   "primary encoder ports": [
     0,
     1
   ],
   "primary motor ports": [
-    0,
-    1
+    13,
+    8
   ],
   "primary motors inverted": [
     false,
@@ -31,12 +37,12 @@
     3
   ],
   "secondary motor ports": [
-    2,
-    3
+    6,
+    9
   ],
   "secondary motors inverted": [
     true,
     true
   ],
-  "velocity measurement period": 100
+  "velocity measurement period": 8
 }
